# author

./: .env  .gitignore  Cargo.toml  build.rs
cli/: Cargo.toml  build.rs
cli/examples/: add_new_key.rs
cli/src/: database.rs  main.rs  yubikey.rs
examples/: add_new_key.rs
migrations/2021-03-20-193613_add_ssh_tables/: down.sql  up.sql
proto/: author.proto  govna.proto
src/: database.rs  key.rs  main.rs  yubikey.rs
src/database/: models.rs  schema.rs
src/rpc/: authorize.rs  identity.rs  mod.rs
web/: Cargo.toml
