[package]
name = "author"
version = "0.0.1"
description = "An example authentication server for managing access to secured resources"
authors = ["Mitchell Grenier <mitchell@confurious.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
clap = "3.0.0-beta.2"
diesel = { version = "1.4.6", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.8.2"
futures-core = "0.3"
futures-util = "0.3"
hex = "0.4.2"
log = "0.4.13"
prost = "0.7"
rand = "0.8.3"
sshcerts = {version = "0.4.4", features = ["yubikey"]}
tokio = { version = "1.0.0", features = ["full"] }
tonic = {version = "0.4", features = ["tls"] }
x509-parser = {version = "0.9", features = ["verify"]}

[build-dependencies]
tonic-build = "0.4"
prost = "0.7"

[dev-dependencies]
sshcerts = {version = "0.4.4", features = ["yubikey"]}

[[example]]
name = "add_new_key"